--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -9,23 +9,25 @@
   <title>TinyApp</title>
 </head>
 <body>
-  <main style="margin: 1em;">
-    <h3>My URLs</h3>
-    <table class="table">
+  <div class="container">
+    <h1 class="text-center mt-4">URLs</h1>
+    <table class="table mt-4">
       <thead>
         <tr>
-          <th scope="col">Short URL ID</th>
-          <th scope="col">Long URL</th>
-          <th scope="col">Actions</th>
+          <th>Short URL</th>
+          <th>Long URL</th>
+          <th>Edit</th>
+          <th>Delete</th>
         </tr>
       </thead>
       <tbody>
-        <% for (let id in urls) { %>
+        <% for (const [shortURL, longURL] of Object.entries(urls)) { %>
           <tr>
-            <td><%= id %></td>
-            <td><%= urls[id] %></td>
+            <td><a href="/u/<%= shortURL %>"><%= shortURL %></a></td>
+            <td><%= longURL %></td>
+            <td><a href="/urls/<%= shortURL %>">Edit</a></td>
             <td>
-              <form method="POST" action="/urls/<%= id %>/delete">
+              <form method="POST" action="/urls/<%= shortURL %>/delete">
                 <button type="submit" class="btn btn-danger">Delete</button>
               </form>
             </td>
@@ -33,7 +35,7 @@
         <% } %>
       </tbody>
     </table>
-  </main>
+  </div>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
