--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,5 +18,18 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <% if (username) { %>
+      <span class="navbar-text">
+        Logged in as: <%= username %>
+      </span>
+      <form method="POST" action="/logout" style="margin-left: 1em;">
+        <button type="submit" class="btn btn-light">Logout</button>
+      </form>
+    <% } else { %>
+      <form method="POST" action="/login">
+        <input type="text" name="username" placeholder="Username" />
+        <button type="submit" class="btn btn-light">Login</button>
+      </form>
+    <% } %>
   </nav>
 </header>
