--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -9,6 +9,8 @@
   <title>TinyApp</title>
 </head>
 <body>
+  <% include('_header') %>
+
   <div class="container">
     <h1 class="text-center mt-4">URLs</h1>
     <table class="table mt-4">
@@ -36,6 +38,7 @@
       </tbody>
     </table>
   </div>
+
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
