--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Bootstrap CSS -->
+  <link
+  rel="stylesheet"
+  href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+  integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+  crossorigin="anonymous"
+    />
   <title>Login</title>
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+  <%- include('partials/_header') %>
   <h2>Login</h2>
   <form method="POST" action="/login">
     <input type="email" name="email" placeholder="Email" required />
