--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,6 +18,11 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <% if (typeof user !== 'undefined' && user !== null) { %>
+  <span class="navbar-text">
+    
+  </span>
+<% } %>
     <% if (user) { %>
       <span class="navbar-text">
         Logged in as: <%= user.email %>
