--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -19,10 +19,8 @@
       </div>
     </div>
     <% if (typeof user !== 'undefined' && user !== null) { %>
-  <span class="navbar-text">
-    
-  </span>
-<% } %>
+      <span class="navbar-text"></span>
+    <% } %>
     <% if (user) { %>
       <span class="navbar-text">
         Logged in as: <%= user.email %>
@@ -31,8 +29,8 @@
         <button type="submit" class="btn btn-light">Logout</button>
       </form>
     <% } else { %>
-      <a class="nav-item nav-link" href="/register">Register</a>
-      <a class="nav-item nav-link" href="/login">Login</a>
+      <a class="nav-item nav-link text-white" href="/register">Register</a>
+      <a class="nav-item nav-link text-white" href="/login">Login</a>
     <% } %>
   </nav>
 </header>
