cleaned up the code

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,7 +17,7 @@
         <tr>
           <th>Short URL</th>
           <th>Long URL</th>
-          <th>Visits</th> <!-- Add column for visits -->
+          <th>Visits</th> 
           <th>Edit</th>
           <th>Delete</th>
         </tr>
