--- a/views/register.ejs
+++ b/views/register.ejs
@@ -66,7 +66,7 @@
           </div>
         </div>
         <div class="text-center">
-          <button type="submit" class="btn btn-primary btn-sm w-100">Register</button> <!-- Apply w-100 class -->
+          <button type="submit" class="btn btn-primary btn-sm w-100">Register</button> 
         </div>
       </form>
     </div>
